<resources>
    <!-- [앱 기본 정보] -->
    <string name="app_name">app_test_helper</string>

    <!-- [홈 화면 관련 문자열] -->
    <string name="title_home">홈</string>

    <!--[드로어 관련 문자열]-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--[드로어 관련 문자열]-->
    <string name="nav_header_title">Helper</string>
    <string name="nav_header_subtitle">Helper_App@helper.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--[메뉴 관련 문자열]-->
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_notifications">Reminder</string>
    <string name="menu_map">Map</string>
    <string name="menu_gallery">갤러리</string>
    <string name="menu_slideshow">슬라이드</string>

    <!-- [대시보드 관련 문자열] -->
    <string name="title_dashboard">대쉬보드</string>

    <!-- [맵 화면 관련 문자열] -->
    <string name="title_mapboard">맵</string>

    <!-- [알림 화면 관련 문자열] -->
    <string name="title_notifications">알람</string>

    <!-- [사이드바 관련 문자열] -->
    <string name="drawer_open">메뉴열기</string>
    <string name="drawer_close">메뉴닫기</string>


    <!--[content_page_subtitle_text 문자열]-->
    <string name="content_page_subtitle_text_1">어디가 아픈가요?</string>
    <string name="content_page_subtitle_text_2">여기엔 이게 도움이 될거에요</string>
    <string name="content_page_subtitle_text_3">내 근처 이곳에 있어요</string>
    <string name="content_page_subtitle_text_4">히스토리 페이지</string>

    <!--[login_page 문자열]-->
    <string name="login_text">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_text">Not yet registered?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--각 string 추가 시, 영역별 정리 필요!!!!!!!-->

    <!--[signup_page 문자열]-->
    <string name="signup2_text">Signup</string>
    <string name="username2_hint">Email</string>
    <string name="password2_hint">Password</string>
    <string name="signup_button_text">Signup</string>



</resources>